Fixed title in User Settings

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         ],
         "configuration": {
             "type": "object",
-            "title": "TypeScript configuration",
+            "title": "Open shell configuration",
             "properties": {
                 "openShell.shell": {
                     "type": "string",
