--- a/package.json
+++ b/package.json
@@ -57,11 +57,9 @@
         "vscode:prepublish": "npm run compile",
         "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "npm run compile && node ./node_modules/vscode/bin/test"
+        "postinstall": "node ./node_modules/vscode/bin/install"
     },
     "devDependencies": {
-        "@types/mocha": "^2.2.44",
         "@types/node": "^8.0.53",
         "typescript": "^2.6.1",
         "vscode": "^1.1.7"
